homework/devops-kubernetes-master/module-3/lesson-5/deployment_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
#    owner: "Ivan"
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1
        ports:
        - name: http
          containerPort: 80
