homework/devops-kubernetes-master/module-3/lesson-5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller
spec:
  selector:
    app: python-admission
  ports:
  - port: 8001
    targetPort: 8001
